# eval-harness

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
pkg/reports/: generator.py
