[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-harness"
version = "0.1.0"
description = "Replay episodes, score results, detect regressions for AI agent runs"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
eval-harness = "cli.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
